# 4LetterWordGame

./: .gitignore  README.md  app.py  application.py  pyproject.toml  scrabble_graph.pkl  scrabble_words.txt  scratch.ipynb  script.py  word.txt  word_definitions.json  word_freq.json  wordsdefiniitons_graph2.pkl  wordsdetail.txt  wordsdetail2.txt  wordsdetail_graph.pkl
static/: script.js  styles.css
templates/: index.html
