[tool.poetry]
name = "4letterwordgame"
version = "0.1.0"
description = ""
authors = ["tobyprofitt <tobyprofitt1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
seaborn = "^0.13.0"
Flask = "^3.0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
